--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 </head>
 <body>
         <h1>
-            Welcome to my website!!!
+            My first website.....
         </h1>
+        <p class="p1">
+            Hello, welcome to my first website. 
+        </p>
+        <p class ="p2">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis labore ipsa facilis consequuntur provident itaque nulla iste! Cumque quas eos vero, ipsam inventore officiis, earum delectus dolore, consequatur est aperiam!
+        </p>
 
 
 </body>
